--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.firebaseui:firebase-ui:0.6.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.facebook.android:facebook-android-sdk:4.14.1'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     //implementation 'com.google.firebase:firebase-messaging:17.3.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
