--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".CustomAuthActivity"
+            android:label="@string/label_custom_auth" />
+        <activity
             android:name=".GoogleSignInActivity"
             android:label="@string/label_google_sign_in" />
         <activity
